--- a/admin/Assets/css/bootstrap-grid.css
+++ b/admin/Assets/css/bootstrap-grid.css
@@ -21,6 +21,7 @@ html {
   margin-right: auto;
   padding-right: 15px;
   padding-left: 15px;
+  margin-top: 40px;
 }
 
 @media (min-width: 576px) {
